# dynamic-profile-endpoint

dynamic_profile/: Makefile  pyproject.toml
dynamic_profile/src/dynamic_profile/: app.py
